<resources>
    <string name="alliance_blue">Blue Alliance</string>
    <string name="alliance_color">Alliance Color:</string>
    <string name="alliance_red">Red Alliance</string>
    <string name="app_name">Infinite Recharge</string>
    <string name="begin_scouting">Begin Scouting</string>
    <string name="dump_data_file">Dump Data File</string>
    <string name="end_of_match">End of Match</string>
    <string name="eom_end_state">End State</string>
    <string name="eom_penalties">Penalties</string>
    <string name="eom_state_nothing">Nothing</string>
    <string name="eom_state_parked">Parked</string>
    <string name="eom_state_hang_attempt">Attempted Hang</string>
    <string name="eom_state_hang_success">Successful Hang</string>
    <string name="field_elements">Field Elements</string>
    <string name="finalize_match">Finalize Match</string>
    <string name="logo_biohazard">Biohazard Logo</string>
    <string name="logo_infiniterecharge">FIRST Infinite Recharge Logo</string>
    <string name="match_info">Match Information</string>
    <string name="match_notes">Match Notes</string>
    <string name="match_number">Match Number:</string>
    <string name="penalty_card_red">Red Card</string>
    <string name="penalty_card_yellow">Yellow Card</string>
    <string name="penalty_disabled">Disabled</string>
    <string name="penalty_foul">Foul</string>
    <string name="period_autonomous">Autonomous</string>
    <string name="period_teleop">TeleOp Period</string>
    <string name="position_far">Far</string>
    <string name="position_middle">Middle</string>
    <string name="position_near">Near</string>
    <string name="position_start">Robot Position:</string>
    <string name="position_station">Driver\'s Station:</string>
    <string name="rematch">Rematch</string>
    <string name="scouter_name">Scouter Name:</string>
    <string name="team_number">Team Number:</string>
    <string name="title_activity_end_of_match">End Of Match</string>
    <string name="title_activity_autonomous">Autonomous</string>
    <string name="title_activity_teleop">Teleop</string>
    <string name="title_activity_match_notes">MatchNotes</string>
</resources>
