<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.biohazard4050.infiniterecharge.EndOfMatch">

    <!-- End of Match background image -->
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="960dp"
        android:layout_height="463dp"
        android:src="@drawable/background_eom_1200x578"
        android:contentDescription="backgroundImageView"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"/>

    <!-- Container for EndOfMatch form controls -->
    <RelativeLayout
        android:id="@+id/matchInfoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/backWhite"
        android:padding="16sp"
        android:layout_marginTop="48sp">

        <!-- Container for End State form controls -->
        <RelativeLayout
            android:id="@+id/endStateLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">

            <!-- "End State" header -->
            <TextView
                android:id="@+id/endPositionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eom_end_state"
                android:textSize="30sp"
                android:textStyle="bold" />

            <!-- End position radio buttons -->
            <RadioGroup
                android:id="@+id/endStateRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/endPositionTextView"
                android:layout_marginLeft="@dimen/item_horizontal_margin_big">

                <!-- "Did Nothing" radio button -->
                <RadioButton
                    android:id="@+id/nothingRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/eom_state_nothing"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <!-- "Parked" radio button -->
                <RadioButton
                    android:id="@+id/parkedRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/eom_state_parked"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <!-- "Attempted Hang" radio button -->
                <RadioButton
                    android:id="@+id/hangAttemptRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/eom_state_hang_attempt"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <!-- "Successful Hang" radio button -->
                <RadioButton
                    android:id="@+id/hangSuccessRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/eom_state_hang_success"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </RadioGroup>
        </RelativeLayout>

        <!-- Container for Penalties form controls -->
        <RelativeLayout
            android:id="@+id/penaltiesLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/endStateLayout"
            android:layout_marginLeft="@dimen/item_horizontal_margin_big">

            <!-- "Penalties" header -->
            <TextView
                android:id="@+id/penaltiesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eom_penalties"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/penaltiesCheckboxGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/penaltiesTextView"
                android:layout_marginLeft="@dimen/item_horizontal_margin_big"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/penaltyYellowCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/penalty_card_yellow"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/penaltyRedCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/penalty_card_red"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/penaltyFoulCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/penalty_foul"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/penaltyDisabledCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked"
                    android:text="@string/penalty_disabled"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <!-- "Match Notes" button -->
    <Button
        android:id="@+id/matchNotesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/item_vertical_margin_big"
        android:onClick="onButtonClicked"
        android:padding="@dimen/item_horizontal_margin_small"
        android:text="@string/match_notes"
        android:textSize="24sp"
        android:textStyle="bold" />
</RelativeLayout>
